# pick_and_place

./: CMakeLists.txt  README.md  package.xml  ros.repos
action/: pick_and_place.action
config/: brick_data.yaml  configRVIZ.rviz
launch/: start_action.launch  start_brick_layer.launch
nodes/: action_client.py  brick_builder.py
srv/: go_to.srv
